# SDL-Components

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  button.cpp  component_mgr.cpp  label.cpp  rectangle.cpp
includes/components/: button.h  component.h  label.h  rectangle.h  slider.h
includes/event/: event_args.h  event_manager.h
includes/ext/: align.h  color.h  content.h  gfxext.h  global.h  object.h  pos.h  ttf.h
includes/utils/: print.h
src/components/: button.cpp  component.cpp  label.cpp  rectangle.cpp
src/event/: event_args.cpp
src/ext/: align.cpp  content.cpp  gfxext.cpp  ttf.cpp
